the Whizzo quality assortment

--- a/faq.html
+++ b/faq.html
@@ -2,91 +2,151 @@
 <html lang="en" class="rams-bladder">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">	
 	<title>Project Rams Bladder</title>
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="/css/reset.css">
-	<link rel="stylesheet" href="/css/rams-bladder.css">
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/superhero/bootstrap.min.css" rel="stylesheet" integrity="sha256-o0IkLyCCWGBI+ryg6bL44/f8s4cb7+5bncR4LvU57a8= sha512-jptu6vg45XTY9uPX3vD5nHN4vASCN2hHl+fhmgkdd/px/bFHKMXmDXhkNmTiCpKqH6sliEPFakl2KZNav2Zo1Q==" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/rams-bladder.css">
 </head>
 <body class="faq">
-	<header>
+	<nav class="navbar navbar-default navbar-static-top">
+		<svg version="1.1" id="dl-logo" class="dl-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+			<path id="d" class="d" fill="#000000" d="m 10.1,30 28,0 c 3.8,0.2 6.8,0.9 9.1,2.2 2.6,1.5 4.6,3.6 6.1,6.5 1.5,2.9 2.3,6.3 2.3,10.4 0,4 -0.7,7.5 -2.2,10.7 -1.4,3.1 -3.6,5.6 -6.3,7.4 -2.8,1.8 -6.6,2.7 -11.4,2.7 l -16.5,0 0,-24.5 8.3,0 0,18.8 6.2,0 c 3.2,0 5.7,-0.5 7.4,-1.5 1.7,-1 3.1,-2.7 4.1,-5.1 1,-2.4 1.5,-5.1 1.5,-8 0,-2.8 -0.5,-5.3 -1.5,-7.5 -1,-2.2 -2.3,-3.8 -4,-4.9 -1.7,-1.1 -4.6,-1.7 -8.7,-1.7 l -5,0 -16.3,0 C 9.5,40 8.6,44.9 8.6,50 8.6,72.9 27.2,91.5 50.1,91.5 61.3,91.5 71.5,87 79,79.8 l 11.3,0 C 81,92 66.5,100 50,100 l 0,0 C 22.4,100 0,77.6 0,50 l 0,0 C 0,42.9 1.5,36.2 4.2,30 l 5.9,0 z" />
+			<path id="l" class="l" fill="#000000" d="m 93.4,70 -7,0 -24.2,0 0,-40 8.3,0 0,34.3 18.5,0 C 90.7,59.8 91.5,55 91.5,50 91.5,27.1 72.9,8.5 50,8.5 38.7,8.5 28.5,13 21,20.3 l -11.2,0 C 18.9,8 33.5,0 50,0 l 0,0 c 23.9,0 43.9,16.8 48.8,39.2 0.8,3.5 1.2,7 1.2,10.8 0,7.1 -1.5,13.9 -4.2,20 l -9.5,0 0,0 7.1,0 z" />
+		</svg>
 		<h1>Project Rams Bladder</h1>
-		<nav>
-			<a href="#">Sign Up!</a>
-			<a href="faq.html">FAQ</a>
-			<a href="#">Support</a>
-		</nav>
-	</header>
-	<main>
-		<div class="left-col">
+		
+		<ul class="nav nav-pills">
+			<li class="nav-item"><a href="index.html">Home</a></li>
+			<li class="nav-item"><a href="#">Sign Up!</a></li>
+			<li class="nav-item active"><a href="faq.html">FAQ</a></li>
+			<li class="nav-item"><a href="#">Support</a></li>
+		</ul>
+	</nav>
+	<main class="container">
+		<div class="row">
 			<h2>FAQs</h2>
 			<p>I'm not a witch, I'm not a witch! </p>
 			<h3>There are ways of telling whether she is a witch.</h3>
-			<ul>
-				<li class="q">What do you do with witches?</li>
-				<li class="a">Burn them.</li>
-				<li class="q">And what do you burn, apart from witches?</li>
-				<li class="a">More witches....</li>
-				<li class="a">... Wood.</li>
-				<li class="q">Good. Now, why do witches burn?</li>
-				<li class="a">...because they're made of... wood?</li>
-				<li class="q">Good. So how do you tell whether she is made of wood?</li>
-				<li class="a">Build a bridge out of her.</li>
-				<li class="q">But can you not also build bridges out of stone?</li>
-				<li class="a">Oh yeah.</li>
-				<li class="q">Does wood sink in water?</li>
-				<li class="a">No, no, it floats!... It floats! Throw her into the pond!</li>
-				<li class="q">No, no. What else floats in water?</li>
-				<li class="a">Bread...</li>
-				<li class="a">Apples...</li>
-				<li class="a">Very small rocks...</li>
-				<li class="a">Cider...</li>
-				<li class="a">Gravy...</li>
-				<li class="a">Cherries...</li>
-				<li class="a">Mud...</li>
-				<li class="a">Churches...</li>
-				<li class="a">Lead! Lead!</li>
-				<li class="a">A Duck!</li>
-				<li class="q">Exactly! So, logically...</li>
-				<li class="a">If she weighed the same as a duck... she's made of wood.</li>
-				<li class="q">And therefore...</li>
-				<li class="a">...A witch!</li>
-			</ul>
+			<div >
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">What do you do with witches?</h3>
+					</div>
+					<div id="answer1" class="panel-body">
+						<div class="">Burn them.</div>
+					</div>
+				</div>
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">And what do you burn, apart from witches?</h3>
+					</div>
+					<div id="answer2" class="panel-body">
+						<div class="">
+							More witches! .... <br>
+							... Wood.
+						</div>
+					</div>
+				</div>
+				
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Good. Now, why do witches burn?</h3>
+					</div>
+					<div id="answer3" class="panel-body">
+						<div class="">...because they're made of... wood?</div>
+					</div>
+				</div>
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Good. So how do you tell whether she is made of wood?</h3>
+					</div>
+					<div id="answer4" class="panel-body">
+						<div class="">Build a bridge out of her.</div>
+					</div>
+				</div>
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">But can you not also build bridges out of stone?</h3>
+					</div>
+					<div id="answer5" class="panel-body">
+						<div class="">Oh yeah.</div>
+					</div>
+				</div>
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Does wood sink in water?</h3>
+					</div>
+					<div id="answer6" class="panel-body">
+						<div class="">No, no, it floats!... It floats! Throw her into the pond!</div>
+					</div>
+				</div>
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">No, no. What else floats in water?</h3>
+					</div>
+					<div id="answer7" class="panel-body">
+						<div class="">
+						Bread... <br>
+						Apples... <br>
+						Very small rocks... <br>
+						Cider... <br>
+						Gravy... <br>
+						Cherries... <br>
+						Mud... <br>
+						Churches... <br>
+						Lead! Lead! <br>
+						A Duck! <br>
+						</div>
+					</div>
+				</div>
+				
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">Exactly! So, logically...</h3>
+					</div>
+					<div id="answer8" class="panel-body">
+						<div class="">If she weighed the same as a duck... she's made of wood.</div>
+					</div>
+				</div>
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">And therefore...</h3>
+					</div>
+					<div id="answer9" class="panel-body">
+						<div class="">...A witch!</div>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="right-col">
-			<svg class="dl-logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 600 600" enable-background="new 0 0 600 600" xml:space="preserve">
-				<g>
-					<path class="d" fill="#000000" d="M60.4,180.2h167.8c22.9,1,41,5.3,54.5,13.1c15.4,8.9,27.7,21.9,36.8,39.2c9.1,17.2,13.7,38.1,13.7,62.5
-						c0,23.9-4.4,45.2-13.1,64c-8.7,18.8-21.4,33.7-38,44.6c-16.7,10.9-39.5,16.4-68.5,16.4h-98.9V273h50v112.9H202
-						c19.5,0,34.4-3,44.7-9.1c10.3-6,18.5-16.3,24.5-30.7c6-14.4,9-30.5,9-48.2c0-17-2.9-32-8.8-45.1c-5.8-13.1-13.9-23-24.3-29.7
-						c-10.3-6.8-27.8-10.1-52.3-10.1h-30.2l-98-0.1C56.5,240,51,269.3,51,300c0,137.5,111.5,249,249,249c67.4,0,128.5-26.8,173.4-70.3
-						h67.6C486.3,552.3,398.7,600,300,600l0,0C134.3,600,0,465.7,0,300l0,0c0-42.6,8.9-83.1,24.9-119.8H60.4z"/>
-					<path class="l" fill="#000000" d="M560.3,420.2h-42.1H372.9V180.2h50v205.9h110.9c9.9-26.8,15.3-55.8,15.3-86.1c0-137.5-111.5-249-249-249
-						c-67.6,0-128.9,26.9-173.8,70.7H58.8C113.4,47.9,201.1,0,300,0l0,0c143.6,0,263.6,100.8,293.1,235.5c4.5,20.8,6.9,42.3,6.9,64.5
-						c0,42.7-8.9,83.4-25,120.2h-56.8v0H560.3z"/>
-				</g>
-			</svg>
-		</div>
+		
 	</main>	
-	<footer>
-		<div class="contact">
-			<h5>What… is your quest?</h5>
-			<p>Camelot!</p>
-			<p>Camelot!</p>
-			<p>Camelot!</p>
-		</div>
-		<div class="sitemap">
-			<h5>Sir Lancelot</h5>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">Privacy</a></li>
-				<li><a href="#">Support</a></li>
-				<li><a href="#">FAQ</a></li>
-				<li><a href="#">Careers</a></li>
-			</ul>
+	<footer class=" footer">
+		<div class="container">
+			<div class="row">
+				<div class="contact col-md-8">
+					<h4>What… is your quest?</h4>
+					<p>Camelot!</p>
+					<p>Camelot!</p>
+					<p>Camelot!</p>
+				</div>
+				<div class="sitemap col-md-4">
+					<h4>Sir Lancelot</h4>
+					<ul>
+						<li class="col-md-6"><a href="#">Home</a></li>
+						<li class="col-md-6"><a href="#">About Us</a></li>
+						<li class="col-md-6"><a href="#">Privacy</a></li>
+						<li class="col-md-6"><a href="#">Support</a></li>
+						<li class="col-md-6"><a href="#">FAQ</a></li>
+						<li class="col-md-6"><a href="#">Careers</a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+<script src="app.js"></script>
 </body>
 </html>
