--- a/index.html
+++ b/index.html
@@ -2,24 +2,28 @@
 <html lang="en" class="rams-bladder">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">	
 	<title>Project Rams Bladder</title>
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
-	<!-- Bootstrap 4.0 -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-GHW2S7IZAQe8+YkyL99LyDj1zdWXSPOG+JZafCtKiSc= sha512-vxM32w6T7zJ83xOQ6FT4CEFnlasqmkcB0+ojgbI0N6ZtSxYvHmT7sX2icN07TqEqr5wdKwoLkmB8sAsGAjCJHg==" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/reset.css">
-	<link rel="stylesheet" href="/css/rams-bladder.css">
-
-	
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/superhero/bootstrap.min.css" rel="stylesheet" integrity="sha256-o0IkLyCCWGBI+ryg6bL44/f8s4cb7+5bncR4LvU57a8= sha512-jptu6vg45XTY9uPX3vD5nHN4vASCN2hHl+fhmgkdd/px/bFHKMXmDXhkNmTiCpKqH6sliEPFakl2KZNav2Zo1Q==" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/rams-bladder.css">
 </head>
 <body>
-	<header>
+	<nav class="navbar navbar-default navbar-static-top">
+		<svg version="1.1" id="dl-logo" class="dl-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+			<path id="d" class="d" fill="#000000" d="m 10.1,30 28,0 c 3.8,0.2 6.8,0.9 9.1,2.2 2.6,1.5 4.6,3.6 6.1,6.5 1.5,2.9 2.3,6.3 2.3,10.4 0,4 -0.7,7.5 -2.2,10.7 -1.4,3.1 -3.6,5.6 -6.3,7.4 -2.8,1.8 -6.6,2.7 -11.4,2.7 l -16.5,0 0,-24.5 8.3,0 0,18.8 6.2,0 c 3.2,0 5.7,-0.5 7.4,-1.5 1.7,-1 3.1,-2.7 4.1,-5.1 1,-2.4 1.5,-5.1 1.5,-8 0,-2.8 -0.5,-5.3 -1.5,-7.5 -1,-2.2 -2.3,-3.8 -4,-4.9 -1.7,-1.1 -4.6,-1.7 -8.7,-1.7 l -5,0 -16.3,0 C 9.5,40 8.6,44.9 8.6,50 8.6,72.9 27.2,91.5 50.1,91.5 61.3,91.5 71.5,87 79,79.8 l 11.3,0 C 81,92 66.5,100 50,100 l 0,0 C 22.4,100 0,77.6 0,50 l 0,0 C 0,42.9 1.5,36.2 4.2,30 l 5.9,0 z" />
+			<path id="l" class="l" fill="#000000" d="m 93.4,70 -7,0 -24.2,0 0,-40 8.3,0 0,34.3 18.5,0 C 90.7,59.8 91.5,55 91.5,50 91.5,27.1 72.9,8.5 50,8.5 38.7,8.5 28.5,13 21,20.3 l -11.2,0 C 18.9,8 33.5,0 50,0 l 0,0 c 23.9,0 43.9,16.8 48.8,39.2 0.8,3.5 1.2,7 1.2,10.8 0,7.1 -1.5,13.9 -4.2,20 l -9.5,0 0,0 7.1,0 z" />
+		</svg>
 		<h1>Project Rams Bladder</h1>
-		<nav>
-			<a href="#">Sign Up!</a>
-			<a href="faq.html">FAQ</a>
-			<a href="#">Support</a>
-		</nav>
-	</header>
+		
+		<ul class="nav nav-pills">
+			<li class="nav-item active"><a href="index.html">Home</a></li>
+			<li class="nav-item"><a href="#">Sign Up!</a></li>
+			<li class="nav-item"><a href="faq.html">FAQ</a></li>
+			<li class="nav-item"><a href="#">Support</a></li>
+		</ul>
+	</nav>
 	<main>
 		<div class="container">
 			<div class="tabs">
@@ -39,27 +43,31 @@
 			</div>
 		</div>
 	</main>	
-	<footer>
-		<div class="contact">
-			<h5>What… is your quest?</h5>
-			<p>Camelot!</p>
-			<p>Camelot!</p>
-			<p>Camelot!</p>
-		</div>
-		<div class="sitemap">
-			<h5>Sir Lancelot</h5>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">Privacy</a></li>
-				<li><a href="#">Support</a></li>
-				<li><a href="#">FAQ</a></li>
-				<li><a href="#">Careers</a></li>
-			</ul>
+	<footer class=" footer">
+		<div class="container">
+			<div class="row">
+				<div class="contact col-md-8">
+					<h4>What… is your quest?</h4>
+					<p>Camelot!</p>
+					<p>Camelot!</p>
+					<p>Camelot!</p>
+				</div>
+				<div class="sitemap col-md-4">
+					<h4>Sir Lancelot</h4>
+					<ul>
+						<li class="col-md-6"><a href="#">Home</a></li>
+						<li class="col-md-6"><a href="#">About Us</a></li>
+						<li class="col-md-6"><a href="#">Privacy</a></li>
+						<li class="col-md-6"><a href="#">Support</a></li>
+						<li class="col-md-6"><a href="#">FAQ</a></li>
+						<li class="col-md-6"><a href="#">Careers</a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</footer>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/js/bootstrap.min.js" integrity="sha256-+h0g0j7qusP72OZaLPCSZ5wjZLnoUUicoxbvrl14WxM= sha512-0z9zJIjxQaDVzlysxlaqkZ8L9jh8jZ2d54F3Dn36Y0a8C6eI/RFOME/tLCFJ42hfOxdclfa29lPSNCmX5ekxnw==" crossorigin="anonymous"></script>
-	<script src="app.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+<script src="app.js"></script>
 </body>
 </html>
