insert random Monty Python quote here

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 				<div class="sitemap col-md-4">
 					<h4>Sir Lancelot</h4>
 					<ul>
-						<li class="col-md-6"><a href="#">Home</a></li>
-						<li class="col-md-6"><a href="#">About Us</a></li>
+						<li class="col-md-6"><a href="index.html">Home</a></li>
+						<li class="col-md-6"><a href="about.html">About Us</a></li>
 						<li class="col-md-6"><a href="#">Privacy</a></li>
 						<li class="col-md-6"><a href="#">Support</a></li>
-						<li class="col-md-6"><a href="#">FAQ</a></li>
+						<li class="col-md-6"><a href="faq.html">FAQ</a></li>
 						<li class="col-md-6"><a href="#">Careers</a></li>
 					</ul>
 				</div>
